[gd_scene load_steps=17 format=3 uid="uid://3i0rnjrn48xk"]

[ext_resource type="Script" uid="uid://cxk03wchjcnct" path="res://scripts/main_menu.gd" id="1_8ln24"]
[ext_resource type="Texture2D" uid="uid://bomyxs8cg4oyf" path="res://art/space.jpg" id="2_rtw2f"]
[ext_resource type="FontFile" uid="uid://dyysu3n1yjfqk" path="res://fonts/Death Star.otf" id="3_oa1go"]
[ext_resource type="Script" uid="uid://yrwwhm0qb1kn" path="res://scripts/volume_slider.gd" id="5_8ln24"]
[ext_resource type="FontFile" uid="uid://x0kdvigwy2xk" path="res://fonts/Maitree Medium.ttf" id="6_oa1go"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vrkn"]
bg_color = Color(0.14468117, 0.21588369, 0.3024436, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nlkkf"]
texture = ExtResource("2_rtw2f")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhts7"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_06t4h"]
bg_color = Color(0.78352344, 0.7835234, 0.7835234, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fu7sn"]
bg_color = Color(0.7877592, 0.78775924, 0.787759, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_06t4h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nlkkf"]
bg_color = Color(0.14406255, 0.14406255, 0.14406249, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_glbon"]
bg_color = Color(0, 0, 0, 0.79607844)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_fu7sn"]
color = Color(1, 1, 1, 1)
thickness = 8

[sub_resource type="StyleBoxLine" id="StyleBoxLine_jix8l"]
color = Color(0, 0.7019608, 0.8784314, 1)
thickness = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ln24"]
bg_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8ln24")

[node name="Background-Blue" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7vrkn")

[node name="Background-Space" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_nlkkf")

[node name="MainButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -174.76276
offset_top = -104.02057
offset_right = 174.76276
offset_bottom = 188.02057
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 9

[node name="Button" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_06t4h")
text = "Start game"

[node name="Button2" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_06t4h")
text = "Tutorial"

[node name="Button3" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_06t4h")
text = "Settings"

[node name="Button4" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_06t4h")
text = "Credits"

[node name="Button5" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_06t4h")
text = "Exit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -286.5
offset_top = -267.0
offset_right = 286.5
offset_bottom = -148.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_oa1go")
theme_override_font_sizes/font_size = 80
text = "Astral Impact"

[node name="Tutorial" type="Panel" parent="."]
layout_mode = 0
offset_left = 153.0
offset_top = 57.0
offset_right = 1016.0
offset_bottom = 622.0
theme_override_styles/panel = SubResource("StyleBoxFlat_nlkkf")

[node name="Mechanics" type="Label" parent="Tutorial"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -88.0
offset_top = 24.0
offset_right = 88.0
offset_bottom = 69.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_oa1go")
theme_override_font_sizes/font_size = 32
text = "Mechanics"

[node name="Description" type="Label" parent="Tutorial/Mechanics"]
layout_mode = 0
offset_left = -292.5
offset_top = 45.0
offset_right = 582.5
offset_bottom = 273.0
theme_override_fonts/font = ExtResource("6_oa1go")
theme_override_font_sizes/font_size = 18
text = "1.ผู้เล่นต้องป้องกันจุดศูนย์กลาง (ดาวเคราะห์) จากศัตรู (Alien)
โดยให้ผู้เล่นควบคุมโล่ที่คอยหมุนอยู่รอบแกนกลางโดยกดปุ่ม (A เพื่อหมุนซ้าย และ D เพื่อหมุนขวา)
2.ดาวเคราะห์มี Barrier ป้องกัน โดยดาวเคราะห์ จะมี HP เริ่มต้นคือ 10 
(ถ้า Barrier เป็นสีเหลืองคือทำงานอยู่ ดาวเคราะห์จะไม่ได้รับ Damage)
3.ผู้เล่นต้องยิง Alien เพื่อคุ้มกันดาวเคราะห์ โดยผู้เล่นกดปุ่ม “Spacebar” เพื่อยิงกระสุน 
และกด “Spacebar” ค้าง เพื่อชาร์จแล้วยิงกระสุนลูกใหญ่
"

[node name="Rules" type="Label" parent="Tutorial"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -49.0
offset_top = 271.0
offset_right = 43.0
offset_bottom = 316.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_oa1go")
theme_override_font_sizes/font_size = 32
text = "Rules"

[node name="Description" type="Label" parent="Tutorial/Rules"]
layout_mode = 0
offset_left = -331.5
offset_top = 32.0
offset_right = 480.5
offset_bottom = 293.0
theme_override_fonts/font = ExtResource("6_oa1go")
theme_override_font_sizes/font_size = 18
text = "1.เงื่อนไขการชนะ (ทั้งคู่)
HP ของดาวเคราะห์ต้องมากกว่า 0 จนหมดเวลาใน Stage และ กำจัด Alien แล้วทำคะแนนได้ถึงเป้าหมาย
2.เงื่อนไขการแพ้ (อย่างใดอย่างนึง)
HP ของดาวเคราะห์เป็น 0 หรือ หมดเวลาใน Stage แล้ว คะแนนไม่ถึงเป้าหมาย
3.มีทั้งหมด 2 ด่าน (Stage)
ใน Stage 2 จะมี Goal Score และเวลาที่มากขึ้น

"

[node name="Button5" type="Button" parent="Tutorial"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.25
offset_top = 218.5
offset_right = 114.25
offset_bottom = 263.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_06t4h")
text = "Exit"

[node name="Settings" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -364.0
offset_top = -502.0
offset_right = 364.0
offset_bottom = -46.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_glbon")

[node name="Label" type="Label" parent="Settings"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -62.0
offset_top = 16.0
offset_right = 62.0
offset_bottom = 61.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Settings"

[node name="Button5" type="Button" parent="Settings/Label"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = 332.0
offset_right = 144.0
offset_bottom = 394.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_06t4h")
text = "Exit"

[node name="MusicSlider" type="HSlider" parent="Settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -265.0
offset_top = -106.0
offset_right = 266.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxLine_fu7sn")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_jix8l")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_jix8l")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("5_8ln24")

[node name="MusicLabel" type="Label" parent="Settings/MusicSlider"]
layout_mode = 0
offset_right = 134.0
offset_bottom = 28.0
theme_override_font_sizes/font_size = 20
text = "BGM Volume"

[node name="SFXSlider" type="HSlider" parent="Settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -265.0
offset_top = -28.0
offset_right = 266.0
offset_bottom = 46.00049
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxLine_fu7sn")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_jix8l")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_jix8l")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("5_8ln24")
bus_name = "SFX"

[node name="SFXLabel" type="Label" parent="Settings/SFXSlider"]
layout_mode = 0
offset_right = 134.0
offset_bottom = 28.0
theme_override_font_sizes/font_size = 20
text = "SFX Volume"

[node name="Credits" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8ln24")

[node name="Button5" type="Button" parent="Credits"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.25
offset_top = 265.5
offset_right = 114.25
offset_bottom = 310.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_06t4h")
text = "Exit"

[node name="ScrollContainer" type="ScrollContainer" parent="Credits"]
layout_mode = 0
offset_top = 29.0
offset_right = 1152.0
offset_bottom = 579.0

[node name="VBoxContainer" type="VBoxContainer" parent="Credits/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Developer" type="Label" parent="Credits/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "                     Developers
66050221 นายนวพล โพธิ์แหบ
66050541 นายก้องภัค พัฒนศิริ 
66050576 นายไกรวิชญ์ โตดำรงรัตน์ 
66050956 นายภัทรเศรษฐ์ ช้างมาศ
66051170 นายโอมาร์ เพ็งสะและ"

[connection signal="mouse_entered" from="MainButtons/Button" to="." method="_on_button_hover"]
[connection signal="pressed" from="MainButtons/Button" to="." method="_on_start_pressed"]
[connection signal="mouse_entered" from="MainButtons/Button2" to="." method="_on_button_hover"]
[connection signal="pressed" from="MainButtons/Button2" to="." method="_on_tutorial_pressed"]
[connection signal="mouse_entered" from="MainButtons/Button3" to="." method="_on_button_hover"]
[connection signal="pressed" from="MainButtons/Button3" to="." method="_on_settings_pressed"]
[connection signal="mouse_entered" from="MainButtons/Button4" to="." method="_on_button_hover"]
[connection signal="pressed" from="MainButtons/Button4" to="." method="_on_credits_pressed"]
[connection signal="mouse_entered" from="MainButtons/Button5" to="." method="_on_button_hover"]
[connection signal="pressed" from="MainButtons/Button5" to="." method="_on_exit_pressed"]
[connection signal="mouse_entered" from="Tutorial/Button5" to="." method="_on_button_hover"]
[connection signal="pressed" from="Tutorial/Button5" to="." method="_on_back_tutorial_pressed"]
[connection signal="mouse_entered" from="Settings/Label/Button5" to="." method="_on_button_hover"]
[connection signal="pressed" from="Settings/Label/Button5" to="." method="_on_back_settings_pressed"]
[connection signal="value_changed" from="Settings/MusicSlider" to="Settings/MusicSlider" method="_on_value_changed"]
[connection signal="value_changed" from="Settings/SFXSlider" to="Settings/SFXSlider" method="_on_value_changed"]
[connection signal="pressed" from="Credits/Button5" to="." method="_on_back_credits_pressed"]
